do some code optimization